# konawall-rs

./: Cargo.toml  LICENSE  README.md  flake.nix  home-manager.nix  nix-darwin.nix  package.nix  shell.nix
src/: main.rs
