[package]
name = "konawall"
version = "0.1.0"
authors = ["kat witch <kat@kittywit.ch>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0"
clap = "2.33.3"
structopt = "0.3.22"
rand = "0.8.0"
futures = "0.3"
swayipc-async = "2.0.0-alpha.3"
xrandr = "0.1.0"
x11 = "2.18.2"
